<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.ericbt</groupId>
    <artifactId>vault3</artifactId>
    <version>1</version>

    <properties>
        <eclipse-platform>org.eclipse.platform</eclipse-platform>
        <maven.compiler.release>24</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <profiles>
        <profile>
            <id>Windows-x86_64</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <swt-os>win32</swt-os>
                <swt-arch>x86_64</swt-arch>
                <osgi.platform>win32.win32.x86_64</osgi.platform>
            </properties>
        </profile>
        <profile>
            <id>Windows-aarch_64</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <swt-os>win32</swt-os>
                <swt-arch>aarch64</swt-arch>
                <osgi.platform>win32.win32.aarch64</osgi.platform>
            </properties>
        </profile>
        <profile>
            <id>Linux-x86_64</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <swt-os>linux</swt-os>
                <swt-arch>x86_64</swt-arch>
                <osgi.platform>gtk.linux.x86_64</osgi.platform>
            </properties>
        </profile>
        <profile>
            <id>Linux-aarch_64</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <swt-os>linux</swt-os>
                <swt-arch>aarch64</swt-arch>
                <osgi.platform>gtk.linux.aarch64</osgi.platform>
            </properties>
        </profile>
    </profiles>
    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/mainPackage/resources</directory>
                <targetPath>resources</targetPath> <!-- Optional: Specify the path inside the JAR -->
                <includes>
                    <include>**/*</include> <!-- Include all files and subfolders -->
                </includes>
                <excludes>
                    <exclude>artwork</exclude>
                </excludes>
            </resource>
        </resources>
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <!-- exclude files that sign a jar -->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>

                                <!-- exclude tests -->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>**/test/java/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>mainPackage.MainApplicationWindow</mainClass>
                                    <manifestEntries>
                                        <SWT-OS>${swt-os}</SWT-OS>
                                        <SWT-Arch>${swt-arch}</SWT-Arch>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Eclipse 4.38 components, released 2025-12-10 -->
    <dependencies>
        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.swt.${osgi.platform}</artifactId>
            <version>3.132.0</version>
        </dependency>
        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.swt.svg</artifactId>
            <version>3.131.0</version>
        </dependency>

        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.e4.core.commands</artifactId>
            <version>1.1.700</version>
        </dependency>
        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.core.runtime</artifactId>
            <version>3.34.100</version>
        </dependency>
        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.equinox.common</artifactId>
            <version>3.20.300</version>
        </dependency>
        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.jface.text</artifactId>
            <version>3.29.0</version>
        </dependency>
        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.jface</artifactId>
            <version>3.38.100</version>
        </dependency>
        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.osgi</artifactId>
            <version>3.24.0</version>
        </dependency>
        <dependency>
            <groupId>${eclipse-platform}</groupId>
            <artifactId>org.eclipse.text</artifactId>
            <version>3.14.500</version>
        </dependency>

        <!-- third party dependencies -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>
        <dependency>
            <groupId>org.perf4j</groupId>
            <artifactId>perf4j</artifactId>
            <version>0.9.16</version>
        </dependency>
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.5.13.4</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.50.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.imgscalr</groupId>
            <artifactId>imgscalr-lib</artifactId>
            <version>4.2</version>
        </dependency>

        <!-- test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.13.4</version>
        </dependency>

        <!-- local .jar files -->
        <dependency>
            <groupId>com.ericbt</groupId>
            <artifactId>Vault3.CommonCode</artifactId>
            <version>1.0.1</version>
        </dependency>
    </dependencies>
</project>